--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,91 +1,57 @@
-
-.fieldsrt-form {
-  position: relative;
-}
-.input-form {
-  border: 1px solid rgba($color: #252525, $alpha: 0.3);
-  position: relative;
-}
-.label-form {
-  padding: 15px;
-  width: 100%;
-  font-weight: 200;
-  text-align: center;
-}
-fieldset {
-  position: relative;
-}
-label {
-  position: absolute;
-  // top: 0;
-  left: 0;
-  padding: rem(10);
-  transition: all 0.3s ease 0s;
-  pointer-events: none;
-}
-input,
-select {
-  position: relative;
-  height: 50px;
-  padding: rem(10);
-  width: 100%;
-
-  font-size: rem(16);
-  color: #252525;
-}
-input:focus ~ label,
-input:not(:placeholder-shown) ~ label {
-  opacity: 0;
-}
-//убираем крестики у input search
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-  display: none;
-}
-//убирает крстик у input search в IE и Safari
-.someinput::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
-//УБЕРАЕМ ВСТРОЕННЫЕ СТИЛИ
-input[type="checkbox"],
-input[type="radio"] {
-  position: absolute;
-  appearance: none;
-  width: 0;
-  height: 0;
-  border: 0;
-  // @extend .visually-hidden;
-}
-summary {
-  display: inline-block; // убирает стрелки
-  cursor: pointer;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-select {
-  appearance: none;
-}
-
-//========================================================================================================================================================
-
-summary:after {
-  content: url("../images/icons.svg#arrowBrown");
-  width: rem(25);
-  height: rem(25);
-  position: absolute;
-  right: 0;
-  transition: transform 0.3s;
-  @media (min-width: $pc) {
-    display: none;
+.title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 30px;
+  @media (min-width: $tablet) {
+    font-size: rem(48);
   }
 }
-
-details[open] > summary:after {
-  transform: rotateZ(-180deg);
+.show-more {
+  display: inline-block;
+  font-size: 14px;
+  z-index: 0;
+  color: $colorMain;
+  font-weight: 700;
+  position: relative;
+  text-transform: uppercase;
+  padding: 9px 25px 9px 8px;
+  &::before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16Z' fill='white'/><path d='M6 4L10 8L6 12' stroke='%23EE1C25' stroke-width='2'/></svg>");
+    position: absolute;
+    top: 8px;
+    right: 0;
+  }
+  &:hover {
+    transition: all 0.3s ease 0s;
+    transform: scale(1.1);
+  }
+}
+.btn {
+  background-color: #ea2828;
+  color: white;
+  text-transform: uppercase;
+  padding: 9px 8px;
+  width: 150px;
+  height: rem(40);
+  display: inline-block;
+  @media (min-width: $mobile) {
+    width: 200px;
+    font-size: rem(14);
+    font-weight: 700;
+    padding: 9px 14px;
+    &:hover {
+      background-color: #f94444;
+    }
+    &:active {
+      background-color: #bb0a0a;
+    }
+  }
+}
+.header,
+.footer {
+  a {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
