--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,27 +1,32 @@
 .header {
+
 	&__body {
-	border-bottom: 1px solid rgba($color: #a3a3a3, $alpha: 0.4);
-	padding: 5px 0;
-	height: 7vh;
-	@media (min-width:$tablet){
-		padding: 19px 0;
-		height: auto;
-	}
+		border-bottom: 1px solid rgba($color: #a3a3a3, $alpha: 0.4);
+		padding: 5px 0;
+		@media (min-width: $tablet) {
+			padding: 19px 0;
+			// height: auto;
+		}
+		@media (min-width: $tablet) {
+			// padding: 19px 0;
+			// height: auto;
+		}
 	}
 	&__container {
 		display: flex;
 		flex-flow: row;
-		z-index: 50;
 		align-items: center;
+
 	}
 	&__search {
+
 		flex: 0 0;
 		order: 1;
 		padding-right: 16px;
 		@media (min-width: $tablet) {
 			padding-right: 24px;
 			order: 0;
-			border-right: 1px solid #EEEEEE;
+			border-right: 1px solid #eeeeee;
 		}
 	}
 	&__menu {
@@ -33,8 +38,13 @@
 	}
 	&__logo {
 		flex: 1 1 80%;
+
 		img {
-			@include adaptiveValue("max-width", 233, 120);
+			max-width: rem(120);
+			@media (min-width: $tablet) {
+				max-width: 233px;
+			}
+			// @include adaptiveValue("max-width", 233, 120);
 		}
 		z-index: 1;
 		@media (min-width: $tablet) {
@@ -51,7 +61,11 @@
 		align-items: center;
 		justify-content: center;
 		gap: 10px;
+		a {
+			color: black;
+		}
 	}
+
 	.lock-padding {
 	}
 	.search {
@@ -74,16 +88,27 @@
 	.menu {
 		&__icon {
 		}
+		&__name {
+			@media (max-width: $tablet) {
+				text-align: center;
+				font-size: rem(25);
+				margin-bottom: rem(54);
+				color: #000000;
+				font-weight: 600;
+			}
+			display: none;
+		}
 		&__body {
 			position: absolute;
 			bottom: 0;
+			z-index: 1;
 			left: 0;
 			width: 100%;
-			height: 93vh;
+			height: 100vh;
 			background-color: rgba($color: rgb(255, 255, 255), $alpha: 1);
 			transition: all 0.3s ease 0s;
 			overflow: auto;
-			padding: 150px 0 30px 0;
+			padding: 120px 0 30px 0;
 			transform: translate(-100%, 0);
 			@media (min-width: $tablet) {
 				display: flex;
@@ -105,9 +130,10 @@
 			flex-flow: column;
 			justify-content: space-between;
 			align-items: center;
-			gap: em(54);
-			margin-bottom: rem(54);
+			gap: em(24);
+			margin-bottom: rem(24);
 			@media (min-width: $tablet) {
+				margin-bottom: rem(0);
 				flex-flow: row nowrap;
 				gap: 20px;
 				margin: 0;
@@ -117,12 +143,14 @@
 		&__item {
 		}
 		&__link {
-			color: #808080;
+			color: #000000;
 			font-size: rem(20);
-			@include adaptiveValue("font-size", 16, 20);
-			@media (min-width:$tablet){
+			// @include adaptiveValue("font-size", 16, 20);
+			@media (min-width: $tablet) {
+				color: #808080;
 				font-size: rem(14);
 			}
+
 		}
 	}
 	.icon-menu {
@@ -144,22 +172,32 @@
 	&__bottom {
 	}
 	&__list {
-		text-align: center;
-		padding: 10px 0;
 		display: flex;
-		justify-content: center;
-		flex-flow: row wrap;
-		gap: 30px;
+		flex-flow: column;
+		justify-content: space-between;
+		align-items: center;
+		gap: em(24);
+		margin-bottom: rem(54);
+		@media (min-width: $tablet) {
+			margin: 0;
+			text-align: center;
+			padding: 15px 0 0 0;
+			display: flex;
+			justify-content: center;
+			flex-flow: row wrap;
+			gap: 30px;
+		}
 	}
 	&__item {
 		display: inline-block;
 	}
 	&__link {
-		color: $colorMain;
-		padding: 10px 5px;
-		@media (min-width:$tablet){
+		color: #000000;
+		font-size: rem(20);
+		@media (min-width: $tablet) {
 			padding: 10px 20px;
 			font-size: rem(18);
+			color: $colorMain;
 		}
 	}
 }
@@ -172,7 +210,7 @@
 
 .icon-menu {
 	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: $tablet) {
 		display: block;
 		position: relative;
 		width: rem(30);
