--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -2,3 +2,446 @@
 // font-family: 'PT Sans', sans-serif;
 // font-family: 'PT Serif', serif;
 //====================================================================================================
+.page {
+    max-width: rem(1200);
+    margin: 0 auto;
+}
+.residential {
+    position: relative;
+    margin-top: rem(10);
+    background-color: rgb(230, 226, 222);
+    margin-bottom: rem(44);
+    @media (min-width: $mobileSmall) and (max-width: $mobile) {
+        text-align: center;
+        margin: 10px auto 0 auto;
+    }
+    &__wrapper {
+        @media (min-width: $mobile) {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            outline: 10px solid rgba(253, 253, 253, 0.8);
+            outline-offset: -30px;
+            background: linear-gradient(90deg, rgb(230, 226, 222) 0%, rgba(255, 255, 255, 0) 50%);
+        }
+        @media (min-width: $tablet) {
+            outline-offset: -40px;
+        }
+    }
+    &__body {
+        border: 1px solid #eeeeee;
+        padding: 11px 15px 21px 15px;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        @media (min-width: $mobile) {
+            height: 100%;
+            position: absolute;
+            border: none;
+            padding: 80px 0 61px 70px;
+        }
+        @include adaptiveValue("padding-top", 80, 11);
+    }
+    &__image {
+        display: block;
+        // padding: 0 15px;
+        text-align: end;
+        @media (min-width: $pc) {
+            width: rem(1200);
+        }
+        img {
+            border-top-right-radius: 15px;
+            border-top-left-radius: 15px;
+            width: 100%;
+            @media (min-width: $mobile) {
+                border-top-right-radius: 0px;
+                border-top-left-radius: 0px;
+            }
+            @media (min-width: $pc) {
+                width: auto;
+            }
+        }
+    }
+    &__title {
+        margin-bottom: rem(5);
+        @media (min-width: $tablet) {
+            margin-bottom: rem(25);
+        }
+    }
+    &__text {
+        // margin-bottom: rem(35);
+        font-weight: 400;
+        line-height: 20px;
+        max-width: rem(385);
+        @media (min-width: $mobileSmall) and (max-width: $mobile) {
+            margin: 0 auto;
+        }
+        @media (min-width: $tablet) {
+            font-size: 16px;
+            max-width: rem(400);
+            line-height: 24px;
+        }
+        @include adaptiveValue("margin-bottom", 35, 10);
+    }
+    &__columns {
+        display: flex;
+        flex-flow: row;
+        gap: 14px;
+        // margin-bottom: rem(28);
+        @media (min-width: $mobileSmall) and (max-width: 768px) {
+            justify-content: center;
+        }
+        @include adaptiveValue("margin-bottom", 40, 28);
+
+        @media (min-width: 768px) {
+            margin-bottom: rem(20);
+            flex: 0 0 180px;
+        }
+    }
+    &__column {
+        max-width: rem(180);
+        @media (min-width: 768px) {
+        }
+        &:last-of-type {
+            padding-left: 20px;
+        }
+        &:not(:last-of-type) {
+            border-right: 1px solid #eeeeee;
+            padding-right: 20px;
+        }
+    }
+    &__button {
+        text-align: center;
+        margin-right: 15px;
+        font-size: rem(14);
+        height: 32px;
+        @media (min-width: $tablet) {
+            margin-right: 40px;
+        }
+    }
+    &__more-info {
+    }
+
+    .column {
+        color: #808080;
+        // max-width: rem(172);
+        &__name {
+            // font-size: 14px;
+            line-height: 18px;
+            margin-bottom: rem(5);
+            @media (min-width: $tablet) {
+                // font-size: rem(22);
+                line-height: 24px;
+                margin-bottom: rem(12);
+            }
+            @include adaptiveValue("font-size", 22, 14);
+        }
+        &__text {
+            // font-size: 10px;
+            font-weight: 400;
+            line-height: 14px;
+            @media (min-width: $tablet) {
+                // font-size: rem(12);
+                line-height: 16px;
+            }
+            @include adaptiveValue("font-size", 12, 10);
+        }
+    }
+}
+.differentiators {
+    margin-bottom: rem(51);
+    .mobile {
+        @media (min-width: $mobile) {
+            display: none;
+        }
+    }
+
+    .desktop {
+        display: none;
+        @media (min-width: $mobile) {
+            display: block;
+        }
+    }
+    &__container {
+        @media (min-width: $mobile) {
+            display: flex;
+            flex-flow: row;
+        }
+    }
+    &__body {
+        text-align: center;
+        @media (min-width: $mobile) {
+            flex: 1 0 70%;
+        }
+    }
+    &__title {
+        margin-bottom: rem(18);
+        @media (min-width: $mobile) {
+            font-size: rem(22);
+        }
+    }
+    &__columns {
+        display: flex;
+        flex-flow: row wrap;
+        row-gap: 20px;
+        margin-bottom: rem(41);
+        @media (min-width: $mobile) {
+            row-gap: 57px;
+            text-align: start;
+            // justify-content: start;
+        }
+    }
+    &__column {
+        flex: 1 1 48%;
+        p {
+            margin-bottom: rem(18);
+        }
+    }
+    &__about {
+    }
+    &__learn-more {
+    }
+    .column {
+        @media (min-width: $mobile) {
+            display: flex;
+            flex-flow: row;
+            gap: 20px;
+        }
+        &__icon {
+        }
+        &__name {
+            font-size: 16px;
+            font-weight: 700;
+            color: #ee1c25;
+            margin-bottom: rem(5);
+        }
+        &__text {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 18px;
+            max-width: rem(140);
+            margin: 0 auto;
+            @media (min-width: $mobile) {
+                margin: 0;
+            }
+        }
+    }
+    .about-us {
+        &__title {
+            text-align: center;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 23px;
+            @media (min-width: $mobile) {
+                text-align: start;
+                margin-bottom: rem(18);
+                font-size: rem(22);
+            }
+        }
+        &__text {
+            font-size: 16px;
+            line-height: 24px;
+            text-align: center;
+            font-style: italic;
+            margin-bottom: rem(24);
+            @media (min-width: $mobile) {
+                text-align: start;
+                p:not(:last-of-type) {
+                    margin-bottom: rem(20);
+                }
+            }
+        }
+        &__columns {
+            display: flex;
+            flex-flow: row;
+            justify-content: center;
+            gap: 32px;
+            margin-bottom: rem(42);
+        }
+        &__column {
+            flex: 1 1 50%;
+            text-align: center;
+            @media (min-width: $mobile) {
+                text-align: start;
+                max-width: 130px;
+            }
+        }
+        &__redline {
+            color: #ee1c25;
+            font-size: 32px;
+            display: block;
+            font-weight: 400;
+            line-height: 24px;
+            span {
+                display: block;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 24px;
+            }
+        }
+        &__info {
+            color: #808080;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 20px;
+            text-align: center;
+            @media (min-width: $mobile) {
+                text-align: start;
+            }
+        }
+    }
+    .show-more {
+    }
+}
+.request {
+    margin-bottom: rem(40);
+    &__container {
+    }
+    &__body {
+        border: 10px solid #eeeeee;
+        position: relative;
+        padding: 12px 19px 47px 19px;
+        @media (min-width: $tablet) {
+            max-height: 592px;
+            margin-bottom: rem(86);
+        }
+        &::after,
+        &::before {
+            content: "";
+            display: block;
+            border: 5px solid #ffffff;
+            width: 70%;
+            height: 5px;
+            top: -10px;
+            right: 15%;
+            margin: 0 auto;
+            position: absolute;
+            @media (min-width: $mobile) {
+                width: 40%;
+                right: 30%;
+            }
+        }
+        // &::after {
+        //     left: -5px;
+        //     top: -15px;
+        //     right: 0px;
+        //     bottom: 0px;
+        //     border-left: none;
+        //     border-right: none;
+        //   }
+    }
+    &__title {
+        position: absolute;
+        top: -25px;
+        right: 50%;
+        z-index: 1;
+        transform: translate(50%, 0px);
+        font-size: rem(18);
+        @media (min-width: $mobile) {
+            font-size: rem(32);
+        }
+    }
+    &__text {
+        text-align: center;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #808080;
+        margin: 0 auto rem(46) auto;
+        max-width: rem(600);
+        @media (min-width: $mobile) {
+            margin-top: rem(15);
+            margin-bottom: rem(30);
+        }
+    }
+    &__form {
+    }
+    .title {
+    }
+
+    .form {
+        text-align: center;
+        @media (min-width: $mobile) {
+        }
+        &__body {
+            // text-align: center;
+            @media (min-width: $mobile) {
+                gap: 40px;
+            }
+            @media (min-width: $tablet) {
+                display: flex;
+                flex-flow: row;
+            }
+        }
+        &__left {
+            display: flex;
+            flex-flow: column;
+            flex: 1 0 auto;
+        }
+        &__row {
+            width: 100%;
+            margin-bottom: rem(9);
+            max-width: rem(480);
+            margin: 0 auto rem(9) auto;
+
+            @media (min-width: $mobile) {
+                display: inline-block;
+            }
+        }
+        &__input {
+            border: 2px solid #eeeeee;
+            font-family: PT Sans;
+            font-size: 16px;
+            font-weight: 400;
+            padding: 10px;
+            width: 100%;
+
+            line-height: 26px;
+            letter-spacing: 0px;
+            text-align: left;
+            @media (min-width: $mobile) {
+                //  max-width: 100%;
+            }
+        }
+        &__input::placeholder {
+            color: #eeeeee;
+            @media (min-width: $mobile) {
+                font-size: rem(20);
+            }
+        }
+        &__label {
+            display: block;
+            text-transform: uppercase;
+            font-family: PT Sans;
+            font-size: 10px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0px;
+            text-align: left;
+            color: #808080;
+        }
+        &__row--textarea {
+            margin-bottom: rem(90);
+            @media (min-width: $tablet) {
+                flex: 0 0 50%;
+            }
+        }
+        &__textarea {
+            resize: none;
+            width: 100%;
+            height: rem(120);
+            max-width: rem(480);
+            @media (min-width: $mobile) {
+                height: rem(160);
+                max-width: 100%;
+            }
+        }
+        &__button {
+        }
+    }
+    .input {
+        &__form {
+        }
+    }
+}
