--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,9 +40,6 @@ body {
 		overflow: hidden;
 		touch-action: none;
 	}
-	// Сайт загружен
-	.loaded & {
-	}
 }
 // Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
@@ -50,7 +47,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	// Прижимаем footer
 	> main {
 		flex: 1 1 auto;
 	}
@@ -61,12 +57,6 @@ body {
 }
 // Ограничивающий контейнер ======================================================================================================================================================================================================================
 
-/*
-(i) Стили будут применяться ко
-всем классам содержащим *__container
-Например header__container, main__container и т.д.
-Снипет (HTML): cnt
-*/
 @if ($responsiveType==1) {
 	// Отзывчивая
 	[class*="__container"] {
@@ -107,7 +97,7 @@ body {
 }
 
 // Подключение базовых стилей, шаблонов (заготовок) и вспомогательных  классов
-// Для подключения/отключения конкретных стилей смотри base.scss
+// Для подключения/отключения конкретных стилей смотрим base.scss
 @import "base";
 
 // Подключение стилей общих элементов проекта
