--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,39 +1,31 @@
 .footer {
-    &__container {
-    }
-    &__body {
-    }
     &__top {
-        border-top: 1px solid #EEEEEE;
-        border-bottom: 1px solid #EEEEEE;
+        border-top: 1px solid #eeeeee;
+        border-bottom: 1px solid #eeeeee;
         padding: 20px 0 12px 0;
-        @media (min-width:$mobile){
-             padding-top: rem(53);
+        @media (min-width: $mobile) {
+            padding-top: rem(53);
         }
-
     }
     &__columns {
-        @media (min-width:$mobile){
+        @media (min-width: $mobile) {
             display: flex;
             flex-flow: row nowrap;
             gap: 95px;
             align-items: center;
         }
     }
-    &__column {
-
-    }
     &__who-we {
         display: none;
-        @media (min-width:$mobile){
-             display: block;
+        @media (min-width: $mobile) {
+            display: block;
         }
     }
     &__what-we {
         display: none;
-        @media (min-width:$mobile){
+        @media (min-width: $mobile) {
             display: block;
-       }
+        }
     }
     &__logo {
         margin-bottom: rem(15);
@@ -42,7 +34,6 @@
     &__info {
         margin-bottom: rem(20);
     }
-
     &__row {
         font-size: 12px;
         font-weight: 400;
@@ -54,7 +45,6 @@
         max-width: rem(240);
         color: rgb(0, 0, 0);
         gap: 17px;
-
     }
     &__row span {
         color: #808080;
@@ -68,12 +58,10 @@
         letter-spacing: 0px;
         text-align: left;
         margin-bottom: rem(14);
-
     }
     &__list {
         li {
             margin-bottom: rem(15);
-
         }
     }
     &__link {
@@ -86,7 +74,7 @@
     &__icon {
         display: inline-block;
         padding: 0 12px;
-        &:first-child{
+        &:first-child {
             padding: 0 12px 0 0;
         }
     }
